--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,12 @@ const { title } = Astro.props;
 		<meta name="description" content="Gina & Utkarsh" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta property="og:title" content="Gina & Utkarsh" />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://gina-utkarsh.wedding/opg.png" />
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="800" />
+		<meta property="og:image:height" content="400" />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -34,6 +39,5 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-size: 224px;
 	}
 </style>
