--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
 <Layout title="Gina & Utkarsh">
-	<main class="m m-auto p-4 w-[800px]">
-		<h1 class="text-6xl font-bold text-center">
-			<span class="text-gradient">Gina & Utkarsh</span>
-		</h1>
+	<main class="p-4 w-[800px] h-[100vh] mx-auto">
+		<div class="flex justify-center items-center w-full h-full">
+			<h1 class="text-6xl font-bold text-gradient">
+				Gina & Utkarsh
+			</h1>
+		</div>
 	</main>
 </Layout>
 
