--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,13 +34,13 @@ import Layout from "../layouts/Layout.astro";
     <div
       class="mx-auto max-w-[600px] flex font-plain text-wedding-purple items-center font-bold text-xl justify-around"
     >
-      <div>
-        JABALPUR, INDIA <br />
+      <div class="flex-grow">
+        Jabalpur, India <br />
         July 12-14 <br />
         2024
       </div>
-      <div class="font-fancy text-6xl text-center">&</div>
-      <div class="text-right">
+      <div class="font-fancy text-4xl md:text-6xl text-center">&</div>
+      <div class="text-right flex-grow">
         Houston, Texas <br />
         August 31 <br />
         2024
