--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
   </div>
   <div class="w-full mt-2">
     <div
-      class="mx-auto max-w-[600px] flex font-plain text-wedding-purple items-center font-bold text-xl justify-around"
+      class="mx-auto px-4 max-w-[600px] flex font-plain text-wedding-purple items-center font-bold text-xl justify-around"
     >
       <div class="flex-grow">
         Jabalpur, India <br />
