--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,13 +34,13 @@ import Layout from "../layouts/Layout.astro";
     <div
       class="mx-auto px-4 max-w-[600px] flex font-plain text-wedding-purple items-center font-bold text-xl justify-around"
     >
-      <div class="flex-grow">
+      <div>
         Jabalpur, India <br />
         July 12-14 <br />
         2024
       </div>
       <div class="font-fancy text-4xl md:text-6xl text-center">&</div>
-      <div class="text-right flex-grow">
+      <div class="text-right">
         Houston, Texas <br />
         August 31 <br />
         2024
