--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="h-24"></div>
 
     <!-- <div class="absolute">
-      <div class="badge text-wedding-cream font-plain">
-        <h2 id="circular">
-          &centerdot; Join us in celebrating &centerdot; the joyous marriage of
-        </h2>
-      </div>
+
     </div> -->
 
     <img
@@ -32,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
   </div>
   <div class="w-full mt-2">
     <div
-      class="mx-auto px-4 max-w-[600px] flex font-plain text-wedding-purple items-center font-bold text-xl justify-around"
+      class="mx-auto px-4 max-w-[500px] flex font-plain text-wedding-purple items-center font-bold text-lf justify-around"
     >
       <div>
         Jabalpur, India <br />
