--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,14 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "Novecento";
-    src: url("fonts/NovecentoNarrowBook.otf") format("opentype");
+    src: url("fonts/NovecentoNarrowBold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Novecento";
+    src: url("fonts/NovecentoNarrowBook.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
   }
