Test font with out format.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Gina & Utkarsh">
+  <main></main>
   <div class="h-[450px] w-full bg-wedding-purple relative">
     <div class="h-24"></div>
 
