--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta property="og:image" content="https://gina-utkarsh.wedding/opg.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="400" />
+    <meta property="og:image:height" content="600" />
     <title>{title}</title>
   </head>
   <body class="bg-wedding-cream font-normal">
@@ -43,14 +43,14 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "Novecento";
-    src: url("fonts/NovecentoNarrowBold.ttf") format("truetype");
+    src: url("fonts/NovecentoNarrowBold.ttf");
     font-weight: bold;
     font-style: normal;
   }
 
   @font-face {
     font-family: "Novecento";
-    src: url("fonts/NovecentoNarrowBook.ttf") format("truetype");
+    src: url("fonts/NovecentoNarrowBook.ttf");
     font-weight: normal;
     font-style: normal;
   }
