--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,21 +36,21 @@ const { title } = Astro.props;
 <style is:global>
   @font-face {
     font-family: "Allenoire";
-    src: url("fonts/Allenoire.otf") format("opentype");
+    src: url("/fonts/Allenoire.woff");
     font-weight: normal;
     font-style: normal;
   }
 
   @font-face {
     font-family: "Novecento";
-    src: url("fonts/NovecentoNarrowBold.ttf");
+    src: url("/fonts/NovecentoNarrowBold.woff");
     font-weight: bold;
     font-style: normal;
   }
 
   @font-face {
     font-family: "Novecento";
-    src: url("fonts/NovecentoNarrowBook.ttf");
+    src: url("/fonts/NovecentoNarrowBook.woff");
     font-weight: normal;
     font-style: normal;
   }
