--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
     </div>
 
     <img
-      src="/src/images/splash.jpg"
+      src="splash.jpg"
       class="w-72 rounded-tl-full rounded-tr-full mx-auto"
     />
 
