--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <meta property="og:image:height" content="600" />
     <title>{title}</title>
   </head>
-  <body class="bg-wedding-cream font-normal overflow-y-hidden min-h-full">
+  <body class="bg-wedding-cream font-normal overflow-hidden min-h-full">
     <!-- <header class="flex justify-end items-center gap-4 p-4">
       <a class="hover:underline" href="/">Home</a>
       <a class="hover:underline" href="/story">Our Story</a>
