--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
     >
       <div id="circle-container">
         <h2 id="cirle-text">
-          ting &nbsp;&bullet; The joyous marriage of &bullet; Join us in celebra
+          ting &bullet; The joyous marriage of &bullet; Join us in celebra
         </h2>
       </div>
     </div>
@@ -64,7 +64,7 @@ import Layout from "../layouts/Layout.astro";
     left: 0;
     top: 0;
     transform-origin: bottom center;
-    transform: rotate(7deg);
+    transform: rotate(7.2deg);
     text-align: center;
   }
 </style>
