--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from "../components/Navbar.astro";
 interface Props {
   title: string;
 }
@@ -22,14 +23,6 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-wedding-cream font-normal">
-    <!-- <header class="flex justify-end items-center gap-4 p-4">
-      <a class="hover:underline" href="/">Home</a>
-      <a class="hover:underline" href="/story">Our Story</a>
-      <a class="hover:underline" href="/gallery">Gallery</a>
-      <a class="hover:underline" href="/schedule">Schedule</a>
-      <a class="hover:underline" href="/travel">Travel</a>
-      <a href="/rsvp" class="hover:underline">RSVP</a>
-    </header> -->
     <slot />
   </body>
 </html>
