--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import landingPageImage from "../images/landing-page.jpg";
 ---
 
 <Layout title="Gina & Utkarsh">
-  <main class="text-wedding-purple mx-auto max-w-[800px] text-center">
+  <main class="text-wedding-purple mx-auto max-w-[1000px] text-center">
     <h1 class="text-6xl mt-24 font-fancy">Gina & Utkarsh</h1>
     <div class="font-plain text-lg flex justify-around mt-2">
       <div>
@@ -24,7 +24,7 @@ import landingPageImage from "../images/landing-page.jpg";
     </div>
     <Image
       src={landingPageImage}
-      class="rounded px-4 md:px-0"
+      class="rounded px-4 md:px-0 mb-4"
       alt="Gina and Utkarsh walking in a grass field"
     />
   </main>
