--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Gina & Utkarsh" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta property="og:title" content="Gina & Utkarsh" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://gina-utkarsh.wedding/opg.png" />
