Fix houston date.

--- a/src/components/DaysRemaining.astro
+++ b/src/components/DaysRemaining.astro
@@ -6,7 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
-<days-remaining data-date={date}>
+<days-remaining data-date={date} class="p-1 border">
   <span></span> Days Remaining
 </days-remaining>
 
