--- a/src/pages/save-the-date.astro
+++ b/src/pages/save-the-date.astro
@@ -25,9 +25,9 @@ import saveTheDateImage from "../images/save-the-date.jpg";
     />
 
     <h1
-      class="absolute bottom-[-12px] left-[calc(50%-9.7rem)] font-fancy text-6xl text-wedding-cream font-bold text-gradient"
+      class="absolute bottom-[-12px] left-[calc(50%-11rem)] font-fancy text-6xl text-wedding-cream font-bold text-gradient"
     >
-      gina <br />&nbsp;&nbsp;&ute
+      Gina <br />&nbsp;&nbsp;&nbsp;&Utkarsh
     </h1>
   </div>
   <div
