Add new pages - about us and travel tips.

--- a/src/pages/gallery/[page].astro
+++ b/src/pages/gallery/[page].astro
@@ -35,7 +35,7 @@ const { page } = Astro.props;
 ---
 
 <Layout title="Gina & Utkarsh">
-  <main class="p-4 max-w-[800px] h-[100vh] mx-auto text-center">
+  <main class="text-wedding-purple mx-auto max-w-[1000px] text-center">
     <div class="w-full flex justify-center mb-10 mt-8">
       <Navbar location="Gallery" />
     </div>
