--- a/src/pages/save-the-date.astro
+++ b/src/pages/save-the-date.astro
@@ -2,6 +2,7 @@
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import saveTheDateImage from "../images/save-the-date.jpg";
+import Navbar from "../components/Navbar.astro";
 ---
 
 <Layout title="Gina & Utkarsh">
@@ -51,6 +52,9 @@ import saveTheDateImage from "../images/save-the-date.jpg";
         2024
       </div>
     </div>
+  </div>
+  <div class="w-full flex justify-center mb-10 mt-8">
+    <Navbar location="Save the Dates" />
   </div>
 </Layout>
 
