--- a/src/pages/schedule/[location].astro
+++ b/src/pages/schedule/[location].astro
@@ -5,48 +5,59 @@ import { type EventList, IndiaEvents, HoustonEvents } from "./events";
 
 export function getStaticPaths() {
   return [
-    {params: {location: 'india'}},
-    {params: {location: 'houston'}},
+    { params: { location: "india" } },
+    { params: { location: "houston" } },
   ];
 }
 
 const { location } = Astro.params;
 
-let events: EventList[] = []
-if (location == 'india') {
+let events: EventList[] = [];
+if (location == "india") {
   events = IndiaEvents;
-} else if (location == 'houston') {
+} else if (location == "houston") {
   events = HoustonEvents;
 }
 ---
 
 <Layout title="Gina & Utkarsh">
   <main class="text-wedding-purple mx-auto max-w-[1000px] text-center">
-    <main class="p-4 max-w-[800px] h-[100vh] mx-auto text-center">
-      <div class="w-full flex justify-center mb-10 mt-8">
-        <Navbar location="Schedule" />
-      </div>
+    <div class="w-full flex justify-center mb-10 mt-8">
+      <Navbar location="Schedule" />
+    </div>
     <h1 class="text-6xl mt-10 font-fancy">Schedule</h1>
 
-    <div class="mt-6 text-right md:pr-8 md:mb-[-2rem] flex gap-2 justify-center md:justify-end z-10">
-      { location == 'india'
-        ? (
-          <a href="/schedule/india">
-            <div class="p-2 rounded bg-wedding-purple text-wedding-cream">India</div>
-          </a>
-          <a  href="/schedule/houston">
-            <div class="p-2 rounded border border-wedding-purple">Houston</div>  
-          </a>
-        ): (
-          <a  href="/schedule/india">
-            <div class="p-2 rounded border border-wedding-purple">India</div>  
-          </a>
-          <a href="/schedule/houston">
-            <div class="p-2 rounded bg-wedding-purple text-wedding-cream">Houston</div>
-          </a>
+    <div
+      class="mt-6 text-right md:pr-8 md:mb-[-2rem] flex gap-2 justify-center md:justify-end z-10 font-plain"
+    >
+      {
+        location == "india" ? (
+          <>
+            <a href="/schedule/india">
+              <div class="p-2 rounded bg-wedding-purple text-wedding-cream">
+                India
+              </div>
+            </a>
+            <a href="/schedule/houston">
+              <div class="p-2 rounded border border-wedding-purple">
+                Houston
+              </div>
+            </a>
+          </>
+        ) : (
+          <>
+            <a href="/schedule/india">
+              <div class="p-2 rounded border border-wedding-purple">India</div>
+            </a>
+            <a href="/schedule/houston">
+              <div class="p-2 rounded bg-wedding-purple text-wedding-cream">
+                Houston
+              </div>
+            </a>
+          </>
         )
       }
-    </div>  
+    </div>
 
     <div class="container mx-auto p-4 md:p-8 text-left">
       <div class="grid gap-6">
@@ -65,7 +76,7 @@ if (location == 'india') {
                         {event.event}
                       </h3>
                       <p class="text-sm text-muted-foreground">
-                        {event.time}  &nbsp;&bullet;&nbsp; {event.location}
+                        {event.time} &nbsp;&bullet;&nbsp; {event.location}
                       </p>
                     </div>
                     <div class="p-6">{event.description}</div>
