--- a/src/pages/rsvp/success.astro
+++ b/src/pages/rsvp/success.astro
@@ -5,8 +5,12 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Gina & Utkarsh">
-    <main class="p-4 max-w-[800px] h-[100vh] mx-auto text-center">
-      <div class="w-full flex justify-center mb-10 mt-8">
-        <Navbar location="RSVP" />
+  <main class="text-wedding-purple mx-auto max-w-[1000px] text-center mb-8">
+    <div class="w-full flex justify-center mb-10 mt-8">
+        <Navbar location="RSVP"/>
+      </div>
+
+      <div class="font-normal text-xl">
+        Thank you! You're RSVP has been saved!
       </div>
 </Layout>
