Add registry and clothing information.

--- a/src/pages/travel.astro
+++ b/src/pages/travel.astro
@@ -14,17 +14,22 @@ import { Code } from "astro:components";
     <div class="px-6">
       <h2 class="text-3xl font-plain p-6">India Travel Tips</h2>
 
-      <div class="text-lg md:text-xl flex flex-col gap-4 mb-8 border-2 p-4 font-normal">
+      <div
+        class="text-lg md:text-xl flex flex-col gap-4 mb-8 border-2 p-4 font-normal"
+      >
         <p>
           Remember to stay flexible and open-minded, as traveling in India can
           sometimes be unpredictable.
         </p>
-        <p>Embrace the adventure, and you're sure to
-          create memories that will last a lifetime!
+        <p>
+          Embrace the adventure, and you're sure to create memories that will
+          last a lifetime!
         </p>
       </div>
 
-      <ol class="text-left list-decimal gap-8 flex flex-col text-lg md:text-xl font-normal">
+      <ol
+        class="text-left list-decimal gap-8 flex flex-col text-lg md:text-xl font-normal"
+      >
         <li>
           <b>Research and Plan Ahead:</b> India is a vast and diverse country with
           a rich cultural heritage. Research the places you want to visit, the best
@@ -42,14 +47,24 @@ import { Code } from "astro:components";
           <ol class="list-disc pl-12">
             <li>
               <a
-              href="https://indianvisaonline.gov.in"
-              target="_blank"
-              class="underline text-[#38bdf8] hover:text-[#0284c7]"
-              >e-Visa (indianvisaonline.gov.in)</a
-            >
+                href="https://indianvisaonline.gov.in"
+                target="_blank"
+                class="underline text-[#38bdf8] hover:text-[#0284c7]"
+                >e-Visa (indianvisaonline.gov.in)</a
+              >
+            </li>
+            <li>
+              The Visa application will require an address. Please use the
+              address of Utkarsh's uncle Chandra Pareta.
+              <br />
+              <div class="p-4">
+                305 Laxmi Colony <br />
+                Kakraiya Talaiya, Gorakhpur <br />
+                Jabalpur MP 482001 <br />
+                India
+              </div>
             </li>
           </ol>
-
         </li>
         <li>
           <b>Health Precautions:</b> Consult with your doctor or a travel health
@@ -64,12 +79,8 @@ import { Code } from "astro:components";
           and any necessary medications. If you'd like to purchase India clothing
           we recommend:
           <ol class="list-disc pl-12">
-            <li>
-              Delhi: Chandni Chowk outdoor market or Ambience Mall 
-            </li>
-            <li>
-              Jabalpur: Men - Mangaldeep and Women - Westside
-            </li>
+            <li>Delhi: Chandni Chowk outdoor market or Ambience Mall</li>
+            <li>Jabalpur: Men - Mangaldeep and Women - Westside</li>
           </ol>
         </li>
         <li>
